Adaptação em Usuario