@@ -1,7 +1,6 @@
 package com.esoft.LojaDeJogos.DTOs;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.esoft.LojaDeJogos.models.Jogo;
 import com.esoft.LojaDeJogos.models.Usuario;
@@ -9,33 +8,15 @@ import com.esoft.LojaDeJogos.models.Usuario;
 public record UsuarioDTO(
     Long id,
     String nome,
-    List<JogoDTO> jogos
+    List<Long> jogosIds
 ) {
     public UsuarioDTO(Usuario usuario) {
         this(
             usuario.getId(),
             usuario.getNome(),
             usuario.getJogos() != null ? 
-                usuario.getJogos().stream()
-                    .map(JogoDTO::new)
-                    .collect(Collectors.toList()) 
-                : null
+                usuario.getJogos().stream().map(Jogo::getId).toList() : 
+                null
         );
-    }
-    
-    /*
-        MESMA LOGICA DO JOGO PARA PODER FORNECER O NOME DO JOGO E O ID DELE NA REQUISIÇÃO GET
-    */
-
-    public record JogoDTO(
-        Long id,
-        String nome
-    ) {
-        public JogoDTO(Jogo jogo) {
-            this(
-                jogo.getId(),
-                jogo.getNome()
-            );
-        }
     }
 }
